(feat/styles): fix card text overflow

--- a/src/components/ProductCard/styles/productCard.module.scss
+++ b/src/components/ProductCard/styles/productCard.module.scss
@@ -54,6 +54,12 @@
             justify-content: space-between;
             width: 100%;
         }
+        .titleDescriptionWrapper{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 63px;
+        }
          @mixin cardTag{
             display: flex;
             flex-direction: row;
